[gd_scene load_steps=15 format=3 uid="uid://31h07126r0qd"]

[ext_resource type="Shader" uid="uid://d1xj0rfd2vgxq" path="res://addons/mars-ui/assets/materials/glass.gdshader" id="1_cyyat"]
[ext_resource type="Script" uid="uid://dg0jg7w6ckwcr" path="res://content/scenes/menu/menu_main.gd" id="1_sm88u"]
[ext_resource type="PackedScene" uid="uid://bsjqdvkt0u87c" path="res://addons/mars-ui/content/ui/components/button/button.tscn" id="3_f40n8"]
[ext_resource type="FontFile" uid="uid://b7ba66x8nedqd" path="res://content/assets/fonts/Orbitron-VariableFont_wght.ttf" id="4_8lqmu"]
[ext_resource type="Script" uid="uid://ca6m2v6ey2xht" path="res://content/scenes/menu/menu_move.gd" id="5_awrke"]
[ext_resource type="Script" uid="uid://ds52nopaipv6" path="res://content/scenes/menu/menu_rotate.gd" id="6_l1ol1"]
[ext_resource type="Script" uid="uid://cxmec8j3fxc6j" path="res://content/scenes/menu/menu_scale.gd" id="7_cecho"]
[ext_resource type="Script" uid="uid://cl57mw17dje3i" path="res://content/scenes/menu/menu_time.gd" id="8_dwy47"]
[ext_resource type="Script" uid="uid://bfvy16q8fsegk" path="res://content/scenes/menu/menu_planet.gd" id="9_6i5p8"]
[ext_resource type="Script" uid="uid://cxh11hm5qeoio" path="res://content/scenes/menu/menu_settings.gd" id="10_ic3tv"]
[ext_resource type="PackedScene" uid="uid://bg4wkgaqqs4ps" path="res://addons/mars-ui/content/ui/components/button_toggle/button_toggle.tscn" id="10_t43g3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mw4vq"]
render_priority = 0
shader = ExtResource("1_cyyat")
shader_parameter/color = Color(1, 1, 1, 0.3)
shader_parameter/border_color = Color(1, 1, 1, 1)
shader_parameter/edge_color = Color(0, 0, 0, 1)
shader_parameter/size = Vector2(1, 1)
shader_parameter/border_size = 0.001
shader_parameter/border_fade_in = 0.005
shader_parameter/border_fade_out = 0.0
shader_parameter/corner_radius = 0.04
shader_parameter/roughness = 0.3
shader_parameter/grain_amount = 0.02

[sub_resource type="QuadMesh" id="QuadMesh_q0bqu"]
size = Vector2(0.4, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_60yw7"]
size = Vector3(0.4, 0.3, 0.01)

[node name="MainMenu" type="StaticBody3D"]
script = ExtResource("1_sm88u")

[node name="Background" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_mw4vq")
mesh = SubResource("QuadMesh_q0bqu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_60yw7")

[node name="ControlMenu" type="Node3D" parent="."]

[node name="BtnTglMenu" parent="ControlMenu" instance=ExtResource("10_t43g3")]

[node name="BtnTime" parent="ControlMenu/BtnTglMenu" instance=ExtResource("3_f40n8")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.115, 0)
label = "Time"

[node name="BtnPlanet" parent="ControlMenu/BtnTglMenu" instance=ExtResource("3_f40n8")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, -0.115, 0)
label = "Planet"

[node name="BtnReset" parent="ControlMenu/BtnTglMenu" instance=ExtResource("3_f40n8")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, -0.115, 0)
label = "Reset"

[node name="BtnSettings" parent="ControlMenu/BtnTglMenu" instance=ExtResource("3_f40n8")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.17, 0.12, 0)
label = "Settings"

[node name="Tabs" type="Node3D" parent="ControlMenu"]

[node name="MenuDefault" type="Node3D" parent="ControlMenu/Tabs"]
visible = false

[node name="Lbl1" type="Label3D" parent="ControlMenu/Tabs/MenuDefault"]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, -0.179305, 0.117984, 0)
text = "Solar XR"
font = ExtResource("4_8lqmu")
horizontal_alignment = 0
vertical_alignment = 0

[node name="Lbl2" type="Label3D" parent="ControlMenu/Tabs/MenuDefault"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.180858, 0.024216, 0)
text = "Use the buttons below to control the simulation!"
font = ExtResource("4_8lqmu")
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 2
width = 750.0

[node name="MenuMove" type="Node3D" parent="ControlMenu/Tabs"]
visible = false
script = ExtResource("5_awrke")

[node name="BtnRight" parent="ControlMenu/Tabs/MenuMove" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.085, 0.025, 0)
label = "->"

[node name="BtnLeft" parent="ControlMenu/Tabs/MenuMove" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.005, 0.025, 0)
label = "<-"

[node name="BtnBackward" parent="ControlMenu/Tabs/MenuMove" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, 0.07, 0)
label = "^"

[node name="BtnForward" parent="ControlMenu/Tabs/MenuMove" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.04, -0.02, 0)
label = "\\/"

[node name="BtnUp" parent="ControlMenu/Tabs/MenuMove" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, 0.053, 0)
label = "Up"

[node name="BtnDown" parent="ControlMenu/Tabs/MenuMove" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.08, -0.005, 0)
label = "Down"

[node name="BtnReturn" parent="ControlMenu/Tabs/MenuMove" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.17, 0.12, 0)
label = "Back"

[node name="LblX" type="Label3D" parent="ControlMenu/Tabs/MenuMove"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.186859, 0.064941, 0)
text = "X:"
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblXReadout" type="Label3D" parent="ControlMenu/Tabs/MenuMove"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.166641, 0.064941, 0)
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblY" type="Label3D" parent="ControlMenu/Tabs/MenuMove"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.186859, 0.0392096, 0)
text = "Y:"
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblYReadout" type="Label3D" parent="ControlMenu/Tabs/MenuMove"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.166641, 0.0392096, 0)
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblZ" type="Label3D" parent="ControlMenu/Tabs/MenuMove"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.186859, 0.0134783, 0)
text = "Z:"
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblZReadout" type="Label3D" parent="ControlMenu/Tabs/MenuMove"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.166641, 0.0134783, 0)
horizontal_alignment = 0
vertical_alignment = 0

[node name="MenuRotate" type="Node3D" parent="ControlMenu/Tabs"]
visible = false
script = ExtResource("6_l1ol1")

[node name="BtnRight" parent="ControlMenu/Tabs/MenuRotate" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0454131, 0.0234476, 0)
label = "->"

[node name="BtnLeft" parent="ControlMenu/Tabs/MenuRotate" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0445869, 0.0234476, 0)
label = "<-"

[node name="BtnUp" parent="ControlMenu/Tabs/MenuRotate" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00041309, 0.0684476, 0)
label = "^"

[node name="BtnDown" parent="ControlMenu/Tabs/MenuRotate" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00041309, -0.0215524, 0)
label = "\\/"

[node name="BtnReturn" parent="ControlMenu/Tabs/MenuRotate" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.17, 0.12, 0)
label = "Back"

[node name="LblX" type="Label3D" parent="ControlMenu/Tabs/MenuRotate"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.175218, 0.0496247, 0)
visible = false
text = "X:"
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblXReadout" type="Label3D" parent="ControlMenu/Tabs/MenuRotate"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.150712, 0.0496247, 0)
visible = false
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblY" type="Label3D" parent="ControlMenu/Tabs/MenuRotate"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.175218, 0.0245061, 0)
visible = false
text = "Y:"
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblYReadout" type="Label3D" parent="ControlMenu/Tabs/MenuRotate"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.150712, 0.0245061, 0)
visible = false
horizontal_alignment = 0
vertical_alignment = 0

[node name="MenuScale" type="Node3D" parent="ControlMenu/Tabs"]
transform = Transform3D(0.999999, -0.00106488, 0.000410604, 0.00106475, 0.999999, 0.000325769, -0.000410956, -0.000325324, 1, 0, 0, 0)
visible = false
script = ExtResource("7_cecho")

[node name="BtnDecrease" parent="ControlMenu/Tabs/MenuScale" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -0.06, 0.02, 0)
label = "-"

[node name="BtnIncrease" parent="ControlMenu/Tabs/MenuScale" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0.06, 0.02, 0)
label = "+"

[node name="BtnReturn" parent="ControlMenu/Tabs/MenuScale" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0.00106475, -0.000410951, -0.00106488, 1, -0.000325332, 0.000410609, 0.000325762, 1, -0.169872, 0.120181, -3.07122e-05)
label = "Back"

[node name="LblScale" type="Label3D" parent="ControlMenu/Tabs/MenuScale"]
transform = Transform3D(0.0999999, -8.40359e-11, 0, 1.27462e-10, 0.0999999, 0, -2.91038e-11, 0, 0.1, -0.0340973, 0.111898, 2.23908e-05)
text = "Scale:"
horizontal_alignment = 0
vertical_alignment = 0

[node name="LblReadout" type="Label3D" parent="ControlMenu/Tabs/MenuScale"]
transform = Transform3D(0.0999999, -1.27698e-10, 0, 2.00223e-10, 0.0999999, 0, -5.09317e-11, 0, 0.1, 0.0138012, 0.111847, 4.20583e-05)
horizontal_alignment = 0
vertical_alignment = 0

[node name="MenuTime" type="Node3D" parent="ControlMenu/Tabs"]
visible = false
script = ExtResource("8_dwy47")

[node name="BtnDecrease" parent="ControlMenu/Tabs/MenuTime" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -0.0826867, -0.015, 0)
label = "<<"

[node name="BtnIncrease" parent="ControlMenu/Tabs/MenuTime" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0.0812186, -0.015, 0)
label = ">>"

[node name="BtnLive" parent="ControlMenu/Tabs/MenuTime" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0.120586, 0.0557469, 0)
label = "Live"

[node name="LblDateTime" type="Label3D" parent="ControlMenu/Tabs/MenuTime"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.000570595, 0.0838694, 0)

[node name="LblScalar" type="Label3D" parent="ControlMenu/Tabs/MenuTime"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.00134677, 0.0314462, 0)

[node name="MenuPlanet" type="Node3D" parent="ControlMenu/Tabs"]
transform = Transform3D(0.999999, -0.00106488, 0.000410604, 0.00106475, 0.999999, 0.000325769, -0.000410956, -0.000325324, 1, 0, -0.015306, 0)
script = ExtResource("9_6i5p8")

[node name="BtnTglPlanet" parent="ControlMenu/Tabs/MenuPlanet" instance=ExtResource("10_t43g3")]

[node name="BtnMercury" parent="ControlMenu/Tabs/MenuPlanet/BtnTglPlanet" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, -2.78163e-10, 2.91038e-10, 2.174e-09, 1.5, 8.73115e-11, -6.40284e-10, -1.45519e-10, 1.5, -0.0749947, 0.114982, 1.62988e-06)
font_size = 8
label = "Mercury"

[node name="BtnVenus" parent="ControlMenu/Tabs/MenuPlanet/BtnTglPlanet" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, -2.78149e-10, 3.49246e-10, 2.87254e-09, 1.5, 8.73115e-11, -7.567e-10, -1.74623e-10, 1.5, 2.94391e-05, 0.114982, 9.00693e-06)
label = "Venus"

[node name="BtnEarth" parent="ControlMenu/Tabs/MenuPlanet/BtnTglPlanet" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, -2.78163e-10, 2.91038e-10, 2.174e-09, 1.5, 8.73115e-11, -6.40284e-10, -1.45519e-10, 1.5, 0.0750053, 0.114982, 1.62989e-06)
label = "Earth"

[node name="BtnMars" parent="ControlMenu/Tabs/MenuPlanet/BtnTglPlanet" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, -2.78163e-10, 2.91038e-10, 2.174e-09, 1.5, 8.73115e-11, -6.40284e-10, -1.45519e-10, 1.5, -0.0749947, 0.0399822, 1.62988e-06)
label = "Mars"

[node name="BtnSun" parent="ControlMenu/Tabs/MenuPlanet/BtnTglPlanet" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, -2.78149e-10, 3.49246e-10, 2.63971e-09, 1.5, 8.73115e-11, -7.567e-10, -1.74623e-10, 1.5, 2.94391e-05, 0.0399822, 9.00696e-06)
label = "Sun"

[node name="BtnJupiter" parent="ControlMenu/Tabs/MenuPlanet/BtnTglPlanet" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, -2.78149e-10, 3.49246e-10, 2.63971e-09, 1.5, 8.73115e-11, -7.567e-10, -1.74623e-10, 1.5, 0.075, 0.04, 9.09495e-13)
label = "Jupiter"

[node name="BtnSaturn" parent="ControlMenu/Tabs/MenuPlanet/BtnTglPlanet" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, -2.78163e-10, 2.32831e-10, 1.94116e-09, 1.5, 8.73115e-11, -5.82077e-10, -1.45519e-10, 1.5, -0.075, -0.035, 9.09495e-13)
label = "Saturn"

[node name="BtnUranus" parent="ControlMenu/Tabs/MenuPlanet/BtnTglPlanet" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, -2.78163e-10, 2.91038e-10, 2.174e-09, 1.5, 8.73115e-11, -6.40284e-10, -1.45519e-10, 1.5, 1.81899e-12, -0.035, -1.81899e-12)
label = "Uranus"

[node name="BtnNeptune" parent="ControlMenu/Tabs/MenuPlanet/BtnTglPlanet" instance=ExtResource("3_f40n8")]
transform = Transform3D(1.5, -2.78149e-10, 3.49246e-10, 2.87254e-09, 1.5, 8.73115e-11, -7.567e-10, -1.74623e-10, 1.5, 0.075, -0.035, -2.72848e-12)
font_size = 8
label = "Neptune"

[node name="MenuSettings" type="Node3D" parent="ControlMenu/Tabs"]
visible = false
script = ExtResource("10_ic3tv")

[node name="Settings" type="Label3D" parent="ControlMenu/Tabs/MenuSettings"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.175, 0.1, 0)
text = "Interaction Modes
"
horizontal_alignment = 0

[node name="Settings2" type="Label3D" parent="ControlMenu/Tabs/MenuSettings"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.175, 0, 0)
text = "Simulation Postion:
"
horizontal_alignment = 0

[node name="BtnTglInput" parent="ControlMenu/Tabs/MenuSettings" instance=ExtResource("10_t43g3")]

[node name="BtnTouch" parent="ControlMenu/Tabs/MenuSettings/BtnTglInput" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, 0.06, 0)
label = "Touch"

[node name="BtnPointer" parent="ControlMenu/Tabs/MenuSettings/BtnTglInput" instance=ExtResource("3_f40n8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0.06, 0)
label = "Pointer"

[node name="BtnMove" parent="ControlMenu/Tabs/MenuSettings" instance=ExtResource("3_f40n8")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, -0.04, 0)
label = "Move"

[node name="BtnRotate" parent="ControlMenu/Tabs/MenuSettings" instance=ExtResource("3_f40n8")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, -0.04, 0)
label = "Rotate"

[node name="BtnScale" parent="ControlMenu/Tabs/MenuSettings" instance=ExtResource("3_f40n8")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, -0.04, 0)
label = "Scale"

[node name="FPSCounter" type="Label3D" parent="ControlMenu"]
unique_name_in_owner = true
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.159589, 0.13104, 0)
visible = false
text = "FPS: 00"

[node name="StartMenu" type="Node3D" parent="."]
visible = false

[node name="BtnStart" parent="StartMenu" instance=ExtResource("3_f40n8")]
label = "Start"

[node name="Lbl1" type="Label3D" parent="StartMenu"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.08, 0)
text = "Welcome !"
font = ExtResource("4_8lqmu")

[node name="Lbl2" type="Label3D" parent="StartMenu"]
transform = Transform3D(0.12, 0, 0, 0, 0.12, 0, 0, 0, 0.12, 0, 0.04, 0)
text = "Press the button below to begin:"
font = ExtResource("4_8lqmu")
